content/v1.3.0/en/api/campaign/Settlement.md
---
title: "Settlement"
description: "Auto-generated class reference for Settlement."
---
# Settlement

**Namespace:** TaleWorlds.CampaignSystem.Settlements
**Module:** TaleWorlds.CampaignSystem
**Type:** `public sealed class Settlement : MBObjectBase, ILocatable<Settlement>, IMapPoint, ITrackableCampaignObject, ITrackableBase, ISiegeEventSide, IRandomOwner, ISettlementDataHolder`
**Base:** `MBObjectBase`
**File:** `TaleWorlds.CampaignSystem/Settlements/Settlement.cs`

## Overview

`Settlement` lives in `TaleWorlds.CampaignSystem.Settlements` and exposes the state, behavior, or workflow entry points of that subsystem to mod developers through its public members. Read its properties as “what state it owns” and its methods as “what actions it allows”.

## Mental Model

Start from namespace `TaleWorlds.CampaignSystem.Settlements` to place it in the stack, then inspect its public methods: if it mainly exposes Get/Set members, it is likely a state object; if it centers on Create/Apply/Execute verbs, it behaves more like a service or workflow entry point.

## Key Properties

| Name | Signature |
|------|-----------|
| `Party` | `public PartyBase Party { get; }` |
| `NumberOfLordPartiesAt` | `public int NumberOfLordPartiesAt { get; set; }` |
| `BribePaid` | `public int BribePaid { get; set; }` |
| `SiegeEvent` | `public SiegeEvent SiegeEvent { get; set; }` |
| `IsActive` | `public bool IsActive { get; set; }` |
| `Owner` | `public Hero Owner { get; }` |
| `Banner` | `public Banner Banner { get; }` |
| `IsVisible` | `public bool IsVisible { get; set; }` |
| `IsInspected` | `public bool IsInspected { get; set; }` |
| `WallSectionCount` | `public int WallSectionCount { get; set; }` |
| `NearbyLandThreatIntensity` | `public float NearbyLandThreatIntensity { get; set; }` |
| `NearbyNavalThreatIntensity` | `public float NearbyNavalThreatIntensity { get; set; }` |
| `NearbyLandAllyIntensity` | `public float NearbyLandAllyIntensity { get; set; }` |
| `NearbyNavalAllyIntensity` | `public float NearbyNavalAllyIntensity { get; set; }` |
| `RandomValue` | `public int RandomValue { get; }` |
| `GetPosition2D` | `public Vec2 GetPosition2D { get; }` |
| `Militia` | `public float Militia { get; }` |
| `SettlementWallSectionHitPointsRatioList` | `public MBReadOnlyList<float> SettlementWallSectionHitPointsRatioList { get; }` |
| `SettlementTotalWallHitPoints` | `public float SettlementTotalWallHitPoints { get; }` |
| `MaxHitPointsOfOneWallSection` | `public float MaxHitPointsOfOneWallSection { get; }` |
| `SettlementHitPoints` | `public float SettlementHitPoints { get; set; }` |
| `MaxWallHitPoints` | `public float MaxWallHitPoints { get; }` |
| `Parties` | `public MBReadOnlyList<MobileParty> Parties { get; }` |
| `PatrolParty` | `public PatrolPartyComponent PatrolParty { get; }` |
| `HeroesWithoutParty` | `public MBReadOnlyList<Hero> HeroesWithoutParty { get; }` |
| `Notables` | `public MBReadOnlyList<Hero> Notables { get; }` |
| `SettlementComponent` | `public SettlementComponent SettlementComponent { get; }` |
| `GatePosition` | `public CampaignVec2 GatePosition { get; }` |
| `PortPosition` | `public CampaignVec2 PortPosition { get; }` |
| `CurrentNavigationFace` | `public PathFaceRecord CurrentNavigationFace { get; }` |
| `Position` | `public CampaignVec2 Position { get; }` |
| `HasPort` | `public bool HasPort { get; }` |
| `MapFaction` | `public IFaction MapFaction { get; }` |
| `Name` | `public TextObject Name { get; }` |
| `EncyclopediaText` | `public TextObject EncyclopediaText { get; }` |
| `EncyclopediaLink` | `public string EncyclopediaLink { get; }` |
| `EncyclopediaLinkWithName` | `public TextObject EncyclopediaLinkWithName { get; }` |
| `GarrisonWagePaymentLimit` | `public int GarrisonWagePaymentLimit { get; }` |
| `ItemRoster` | `public ItemRoster ItemRoster { get; }` |
| `BoundVillages` | `public MBReadOnlyList<Village> BoundVillages { get; set; }` |
| `LastAttackerParty` | `public MobileParty LastAttackerParty { get; set; }` |
| `LastThreatTime` | `public CampaignTime LastThreatTime { get; }` |
| `SiegeEngines` | `public SiegeEvent.SiegeEnginesContainer SiegeEngines { get; }` |
| `SiegeEngineMissiles` | `public MBReadOnlyList<SiegeEvent.SiegeEngineMissile> SiegeEngineMissiles { get; }` |
| `BattleSide` | `public BattleSideEnum BattleSide { get; }` |
| `NumberOfTroopsKilledOnSide` | `public int NumberOfTroopsKilledOnSide { get; }` |
| `SiegeStrategy` | `public SiegeStrategy SiegeStrategy { get; }` |
| `Alleys` | `public List<Alley> Alleys { get; }` |
| `IsTown` | `public bool IsTown { get; }` |
| `IsCastle` | `public bool IsCastle { get; }` |
| `IsFortification` | `public bool IsFortification { get; }` |
| `IsVillage` | `public bool IsVillage { get; }` |
| `IsHideout` | `public bool IsHideout { get; }` |
| `IsStarving` | `public bool IsStarving { get; }` |
| `IsRaided` | `public bool IsRaided { get; }` |
| `InRebelliousState` | `public bool InRebelliousState { get; }` |
| `IsUnderRaid` | `public bool IsUnderRaid { get; }` |
| `IsUnderSiege` | `public bool IsUnderSiege { get; }` |
| `LocationComplex` | `public LocationComplex LocationComplex { get; }` |
| `CurrentSettlement` | `public static Settlement CurrentSettlement { get; }` |
| `All` | `public static MBReadOnlyList<Settlement> All { get; }` |
| `GetFirst` | `public static Settlement GetFirst { get; }` |
| `CurrentSiegeState` | `public Settlement.SiegeState CurrentSiegeState { get; }` |
| `OwnerClan` | `public Clan OwnerClan { get; }` |

## Key Methods

### SetWallSectionHitPointsRatioAtIndex
`public void SetWallSectionHitPointsRatioAtIndex(int index, float hitPointsRatio)`

**Purpose:** **Purpose:** Assigns a new value to wall section hit points ratio at index and updates the object's internal state.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
settlement.SetWallSectionHitPointsRatioAtIndex(0, 0);
```

### GetPositionAsVec3
`public Vec3 GetPositionAsVec3()`

**Purpose:** **Purpose:** Reads and returns the position as vec3 value held by the this instance.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
var result = settlement.GetPositionAsVec3();
```

### SetGarrisonWagePaymentLimit
`public void SetGarrisonWagePaymentLimit(int limit)`

**Purpose:** **Purpose:** Assigns a new value to garrison wage payment limit and updates the object's internal state.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
settlement.SetGarrisonWagePaymentLimit(0);
```

### GetInvolvedPartiesForEventType
`public IEnumerable<PartyBase> GetInvolvedPartiesForEventType(MapEvent.BattleTypes mapEventType = MapEvent.BattleTypes.Siege)`

**Purpose:** **Purpose:** Reads and returns the involved parties for event type value held by the this instance.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
var result = settlement.GetInvolvedPartiesForEventType(mapEvent.BattleTypes.Siege);
```

### GetNextInvolvedPartyForEventType
`public PartyBase GetNextInvolvedPartyForEventType(ref int partyIndex, MapEvent.BattleTypes mapEventType = MapEvent.BattleTypes.Siege)`

**Purpose:** **Purpose:** Reads and returns the next involved party for event type value held by the this instance.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
var result = settlement.GetNextInvolvedPartyForEventType(partyIndex, mapEvent.BattleTypes.Siege);
```

### HasInvolvedPartyForEventType
`public bool HasInvolvedPartyForEventType(PartyBase party, MapEvent.BattleTypes mapEventType = MapEvent.BattleTypes.Siege)`

**Purpose:** **Purpose:** Determines whether the this instance already holds involved party for event type.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
var result = settlement.HasInvolvedPartyForEventType(party, mapEvent.BattleTypes.Siege);
```

### IsUnderRebellionAttack
`public bool IsUnderRebellionAttack()`

**Purpose:** **Purpose:** Determines whether the this instance is in the under rebellion attack state or condition.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
var result = settlement.IsUnderRebellionAttack();
```

### GetSettlementValueForEnemyHero
`public float GetSettlementValueForEnemyHero(Hero hero)`

**Purpose:** **Purpose:** Reads and returns the settlement value for enemy hero value held by the this instance.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
var result = settlement.GetSettlementValueForEnemyHero(hero);
```

### IsSettlementBusy
`public bool IsSettlementBusy(object asker)`

**Purpose:** **Purpose:** Determines whether the this instance is in the settlement busy state or condition.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
var result = settlement.IsSettlementBusy(asker);
```

### IsSettlementBusy
`public bool IsSettlementBusy(object asker, int limitingPriority)`

**Purpose:** **Purpose:** Determines whether the this instance is in the settlement busy state or condition.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
var result = settlement.IsSettlementBusy(asker, 0);
```

### GetSettlementBusynessPriority
`public int GetSettlementBusynessPriority(object asker)`

**Purpose:** **Purpose:** Reads and returns the settlement busyness priority value held by the this instance.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
var result = settlement.GetSettlementBusynessPriority(asker);
```

### GetValue
`public float GetValue(Hero hero = null, bool countAlsoBoundedSettlements = true)`

**Purpose:** **Purpose:** Reads and returns the value value held by the this instance.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
var result = settlement.GetValue(null, false);
```

### GetName
`public override TextObject GetName()`

**Purpose:** **Purpose:** Reads and returns the name value held by the this instance.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
var result = settlement.GetName();
```

### GetSettlementValueForFaction
`public float GetSettlementValueForFaction(IFaction faction)`

**Purpose:** **Purpose:** Reads and returns the settlement value for faction value held by the this instance.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
var result = settlement.GetSettlementValueForFaction(faction);
```

### ToString
`public override string ToString()`

**Purpose:** **Purpose:** Returns a human-readable string representation of the this instance.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
var result = settlement.ToString();
```

### OnPartyInteraction
`public void OnPartyInteraction(MobileParty engagingParty)`

**Purpose:** **Purpose:** Invoked when the party interaction event is raised.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
settlement.OnPartyInteraction(engagingParty);
```

### Deserialize
`public override void Deserialize(MBObjectManager objectManager, XmlNode node)`

**Purpose:** **Purpose:** Restores the this instance from serialized data.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
settlement.Deserialize(objectManager, node);
```

### OnFinishLoadState
`public void OnFinishLoadState()`

**Purpose:** **Purpose:** Invoked when the finish load state event is raised.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
settlement.OnFinishLoadState();
```

### OnGameCreated
`public void OnGameCreated()`

**Purpose:** **Purpose:** Invoked when the game created event is raised.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
settlement.OnGameCreated();
```

### OnSessionStart
`public void OnSessionStart()`

**Purpose:** **Purpose:** Invoked when the session start event is raised.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
settlement.OnSessionStart();
```

### CheckPositionsForMapChangeAndUpdateIfNeeded
`public void CheckPositionsForMapChangeAndUpdateIfNeeded()`

**Purpose:** **Purpose:** Verifies whether positions for map change and update if needed holds true for the this instance.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
settlement.CheckPositionsForMapChangeAndUpdateIfNeeded();
```

### Find
`public static Settlement Find(string idString)`

**Purpose:** **Purpose:** Finds the matching entry in the current collection or scope.

```csharp
// Static call; no instance required
Settlement.Find("example");
```

### FindFirst
`public static Settlement FindFirst(Func<Settlement, bool> predicate)`

**Purpose:** **Purpose:** Looks up the matching first in the current collection or scope.

```csharp
// Static call; no instance required
Settlement.FindFirst(func<Settlement, false);
```

### FindAll
`public static IEnumerable<Settlement> FindAll(Func<Settlement, bool> predicate)`

**Purpose:** **Purpose:** Looks up the matching all in the current collection or scope.

```csharp
// Static call; no instance required
Settlement.FindAll(func<Settlement, false);
```

### StartFindingLocatablesAroundPosition
`public static LocatableSearchData<Settlement> StartFindingLocatablesAroundPosition(Vec2 position, float radius)`

**Purpose:** **Purpose:** Starts the finding locatables around position flow or state machine.

```csharp
// Static call; no instance required
Settlement.StartFindingLocatablesAroundPosition(position, 0);
```

### FindNextLocatable
`public static Settlement FindNextLocatable(ref LocatableSearchData<Settlement> data)`

**Purpose:** **Purpose:** Looks up the matching next locatable in the current collection or scope.

```csharp
// Static call; no instance required
Settlement.FindNextLocatable(data);
```

### OnPlayerEncounterFinish
`public void OnPlayerEncounterFinish()`

**Purpose:** **Purpose:** Invoked when the player encounter finish event is raised.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
settlement.OnPlayerEncounterFinish();
```

### GetPosition
`public Vec3 GetPosition()`

**Purpose:** **Purpose:** Reads and returns the position value held by the this instance.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
var result = settlement.GetPosition();
```

### SetNextSiegeState
`public void SetNextSiegeState()`

**Purpose:** **Purpose:** Assigns a new value to next siege state and updates the object's internal state.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
settlement.SetNextSiegeState();
```

### ResetSiegeState
`public void ResetSiegeState()`

**Purpose:** **Purpose:** Returns siege state to its default or initial condition.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
settlement.ResetSiegeState();
```

### AddGarrisonParty
`public void AddGarrisonParty()`

**Purpose:** **Purpose:** Adds garrison party to the current collection or state.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
settlement.AddGarrisonParty();
```

### SetSiegeStrategy
`public void SetSiegeStrategy(SiegeStrategy strategy)`

**Purpose:** **Purpose:** Assigns a new value to siege strategy and updates the object's internal state.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
settlement.SetSiegeStrategy(strategy);
```

### InitializeSiegeEventSide
`public void InitializeSiegeEventSide()`

**Purpose:** **Purpose:** Prepares the resources, state, or bindings required by siege event side.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
settlement.InitializeSiegeEventSide();
```

### OnTroopsKilledOnSide
`public void OnTroopsKilledOnSide(int killCount)`

**Purpose:** **Purpose:** Invoked when the troops killed on side event is raised.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
settlement.OnTroopsKilledOnSide(0);
```

### AddSiegeEngineMissile
`public void AddSiegeEngineMissile(SiegeEvent.SiegeEngineMissile missile)`

**Purpose:** **Purpose:** Adds siege engine missile to the current collection or state.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
settlement.AddSiegeEngineMissile(missile);
```

### RemoveDeprecatedMissiles
`public void RemoveDeprecatedMissiles()`

**Purpose:** **Purpose:** Removes deprecated missiles from the current collection or state.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
settlement.RemoveDeprecatedMissiles();
```

### GetAttackTarget
`public void GetAttackTarget(ISiegeEventSide siegeEventSide, SiegeEngineType siegeEngine, int siegeEngineSlot, out SiegeBombardTargets targetType, out int targetIndex)`

**Purpose:** **Purpose:** Reads and returns the attack target value held by the this instance.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
settlement.GetAttackTarget(siegeEventSide, siegeEngine, 0, targetType, targetIndex);
```

### FinalizeSiegeEvent
`public void FinalizeSiegeEvent()`

**Purpose:** **Purpose:** Executes the FinalizeSiegeEvent logic.

```csharp
// Obtain an instance of Settlement from the subsystem API first
Settlement settlement = ...;
settlement.FinalizeSiegeEvent();
```

## Usage Example

```csharp
// Typically call this after obtaining an instance from the subsystem API
Settlement settlement = ...;
settlement.SetWallSectionHitPointsRatioAtIndex(0, 0);
```

## See Also

- [Area Index](../)